--- a/public/style.css
+++ b/public/style.css
@@ -3,17 +3,11 @@ body {
     font-weight: lighter;
 }
 
-#top-message {
+#bottom-message {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-}
-
-#top-message-close {
-    float:right;
-    font-size: 0.8em;
-    font-weight: bold;
 }
 
 .change-box {
@@ -169,13 +163,13 @@ body {
 }
 
 .rhs-box {
+    margin: 10px 0 0 0;
     padding: 12px 12px 24px 8px;
-    margin: 0;
-    border: 2px solid #779;
-    border-radius: 4px;
+    border: 2px solid #777;
+    /* border-radius: 4px; */
     height: 100%;
-    background-color: #446;
-    color: #ddd;   
+    background-color: #555;
+    color: #ddd;
 }
 
 .rhs-box h2 {
@@ -270,7 +264,7 @@ nav h1 {
 }
 
 .details-table th, .details-table td {
-    border-bottom: 1px solid #668;
+    border-bottom: 1px solid #777;
     padding: 4px 20px 4px 4px;
     vertical-align: middle;
 }
@@ -280,16 +274,19 @@ nav h1 {
 }
 
 .blocks-table {
-    border: 1px solid #668;
+    margin: 10px 0 0 0;
+    border: 2px solid #777;
     width: 100%;
 }
 
 .blocks-table td, .blocks-table th {
-    border-bottom: 1px solid #668;
+    border-bottom: 1px solid #777;
     padding: 8px;
     vertical-align: middle;
+    color: #ddd;
 }
 
 .blocks-table tr.block-selected {
-    background-color: #446;
+    background-color: #555;
+    color: #eee;
 }
